--- a/server/.env
+++ b/server/.env
@@ -5,4 +5,4 @@ APP_URL=http://localhost:4200
 APP_DEBUG=true
 PORT=3001
 
-DB_URI='mongodb+srv://admin:admin@cluster0-aqdrm.mongodb.net/memory-app?w=majority'
+DB_URI='########://################'
